2002-12-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-guide.c (sp_guide_set): Fixed horiz/vert

	* src/desktop-events.c (sp_dt_ruler_event): Fixed
	(sp_dt_guide_event): Fixed

	* src/helper/guideline.h: Renamed to avoid conflict with SPGuide object,
	several signature changes

	* src/helper/guideline.c: Ditto, removed properties

	* src/helper/sp-canvas.c (sp_canvas_window_to_world): Oops, was meant to be y0
	(sp_canvas_world_to_window): Ditto

2002-12-14  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/desktop-properties.c: Fully functional color picker

	* src/display/nr-arena-item.h: Ported rendering from NRBuffer to NRPixBlock,
	involves changes in most Arena objects. Added NO_CACHE flag to rendering.

2002-12-13  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/widgets/paint-selector.c (sp_paint_selector_style_button_add): Changed
	SODIPODI_GLADEDIR -> SODIPODI_PIXAMPDIR (Thanks to Ted Gould)

2002-12-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-guide.c (sp_guide_class_init): Removed translatability of properties

	* src/knot.c (sp_knot_class_init): Removed translatability of properties

	* src/helper/sp-guide.c (sp_guideline_class_init): Removed translatability
	from properties (who needs this?)

	* src/widgets/icon.h: New file, use as frontend to image loading

	* src/widgets/icon.c: New file

	* src/document.c (sp_document_create): Generic method, implement
	constructors as frontends

	* src/sodipodi.c (sodipodi_dispose): Only unref documents and let
	them manage list

	* glade/icons.svg: New icon definition file

2002-12-08  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/dialogs/align.c (sp_align_arrange_clicked): Collected all
	arrangement methods into generic one
	(create_base_menu): Compact
	(sp_align_add_menuitem): New helper
	(sp_quick_align_dialog): Use value matrix instead of different callbacks

2002-12-07  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.c (sp_canvas_expose): Free rects
